# pytest-fastapi-crud-example

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
app/: models.py  schemas.py  user.py
