[project]
name = "user-service-example"
version = "0.1.0"
description = "A simple user service example"
authors = [{ name = "ericsalesdeandrade", email = "sdaeric19@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "uvicorn>=0.40.0",
    "pydantic>=2.12.5",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.44",
    "sqlalchemy-utils>=0.42.1",
]

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-randomly>=4.0.1",
]

# Define UV environment-specific configurations
[tool.uv]
default-groups = ["test"]
